Prevent overflow and abundant white space

--- a/expertise.css
+++ b/expertise.css
@@ -1,19 +1,17 @@
 .expertise {
-  min-height: 100%;
   display: grid;
   grid-template-columns: 1fr repeat(3, 28vw) 1fr;
-  grid-template-rows: 1fr 80% 1fr;
+  grid-template-rows: 0 1fr;
   grid-column-gap: 3%;
   grid-template-areas: 
     ". . . . ."
-    ". a b c ."
-    ". . . . .";
+    ". a b c .";
   text-align: center;
   padding-bottom: 40px;
 }
 
 .expertise > * {
-  margin: 5% 0 5% 0;
+  margin: 20px 0 5% 0;
 }
 
 .expertise > *:first-child {
